# antigravity-linux

./: .gitignore  Dockerfile  Makefile  README.md  RUN-ON-MAC.md  flynn_roadmap_2026.html  setup-github.sh
.github/workflows/: build-arch-iso.yml  build-iso.yml  status-badge.yml
archiso/: Dockerfile  build-arch.sh  build-local.sh  customize_airootfs.sh  packages.x86_64  pacman.conf  profiledef.sh
archiso/airootfs/etc/: flynnos-release  hostname  motd  shadow  vconsole.conf
archiso/airootfs/etc/flynn/: daemon.conf
archiso/airootfs/etc/keyd/: default.conf
archiso/airootfs/etc/mkinitcpio.d/: linux-zen.preset
archiso/airootfs/etc/pacman.d/: mirrorlist
archiso/airootfs/etc/systemd/system/: agd.service  flynn-daemon.service  flynn-day.service  flynn-day.timer  flynn-night.service  flynn-night.timer  flynn-session.service  flynn-update.service  flynn-update.timer  spice-vdagentd.service
archiso/airootfs/etc/xorg.conf.d/: 10-flynn.conf
archiso/airootfs/opt/flynn/agd/: antigravity.py
archiso/airootfs/opt/flynn/compositor/: meson.build
archiso/airootfs/opt/flynn/compositor/include/: flynn-compositor.h
archiso/airootfs/opt/flynn/compositor/shaders/: glow-border.frag
archiso/airootfs/opt/flynn/compositor/src/: ipc.c  renderer.c  shader.c  wm.c
archiso/airootfs/opt/flynn/daemon/: flynn_daemon.py
archiso/airootfs/opt/flynn/install/: install-flynnos-full.sh  install-to-disk.sh  (+1 more)
archiso/airootfs/root/: .Xresources  .bash_profile  .bashrc  .xinitrc  customize_airootfs.sh
archiso/efiboot/loader/: loader.conf
archiso/efiboot/loader/entries/: 01-flynnos-linux.conf  02-flynnos-speech-linux.conf
archiso/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg  archiso_sys.cfg  archiso_tail.cfg
boot-animation/: flynnos.script  generate-chime.py
compositor/: compositor.c  flynn-compositor.service.in  install-compositor.sh  meson.build
compositor/shaders/: tron-grid.frag  tron-grid.vert
compositor/src/: main.c
daemon/: requirements.txt
initramfs/: init
install/: install-flynnos.sh
kernel-config/: fragments.config
phase1/: Dockerfile  build-native.sh  build.sh
phase1/grub/: build-iso.sh  grub-linux.cfg  grub.cfg
phase1/phase2/greetd/: flynn-greeter
phase1/phase2/plymouth/: flynn.plymouth
phase1/rootfs-overlay/: init
phase1/rootfs-overlay/etc/: motd  profile
phase1/rootfs-overlay/etc/X11/: xorg.conf
phase1/rootfs-overlay/root/: .xinitrc
phase2/greetd/: config.toml
phase2/grub-theme/: generate-bg.py  theme.txt
phase2/plymouth/flynn-theme/: flynn.script
phase2/scripts/: install-phase2.sh
phase3/: install-compositor.sh
phase4/apps/: install-apps.sh
phase4/config/: foot.ini
phase4/gaming/: game-mode-switch.sh  install-gaming.sh  steam-launch.sh
phase4/notifications/: install-notifications.sh  mako.conf
phase4/theme/: install-theme.sh
phase5/: install-phase5.sh
phase5/agd/: antigravity.py
phase5/launcher/: flynn-session
pi-control/: deploy-to-pi.sh  notion_anki_sync.py  pi-agent.conf  setup-notion-anki.sh
post-install/: setup-flynnos.sh
pxe/: pi-setup.sh
scripts/: build-iso.sh
systemd/: flynn-compositor.service  flynn-daemon.service
ui/: flynn-ui.sh
(+43 files in other folders)
